# GenAI

./: .gitignore  requirements.txt
Practise/: .env  demo1.ipynb
calculator/: adk.ipynb  main.py
calculator/my_agent/: agent.py  tools.py
crewai/: requirements.txt
crewai/demo/: logs.txt  pyproject.toml  report.md
crewai/demo/src/demo/: crew.py  filter_logs.ipynb  filter_logs.py  main.py
crewai/dual_agent/: README.md  pyproject.toml
crewai/dual_agent/src/dual_agent/: crew.py  main.py
crewai/dual_agent/src/dual_agent/config/: agents.yaml  tasks.yaml
crewai/flows/: flow.ipynb  flow_multilisten.ipynb  flow_router.ipynb  flow_structured_user.ipynb
deep_evalwithrag/: requirements.txt
gradio/: chatbot_ui.py  checkbox.py  imageupload.py  intro.py  radiobuttons.py  requirements.txt
gradio/.gradio/flagged/: dataset1.csv
gradio_usecase/: app.py  faiss.index  rag_engine.py  requirements.txt
job_openings/: agent.py  app.py  db.py  job_postings.db  jobs.db  main.py  requirements.txt  tools.py
langchain/: llamaindex.ipynb  mobile_agent.py  requirements.txt  test_gemini.py
llama_chatbot/: app.py  evaluator.py  faiss.index  rag_enginev1.py  requirements.txt
streamlit/: app.py  chat_history.json  chatbot_interface.py  faiss.index  faiss_meta.json  requirements.txt
