[project]
name = "dual_agent"
version = "0.1.0"
description = "dual_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
dual_agent = "dual_agent.main:run"
run_crew = "dual_agent.main:run"
train = "dual_agent.main:train"
replay = "dual_agent.main:replay"
test = "dual_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
